SDT-103 - added Fortify on demand in gradle config, will add fortify.client.releaseId when received from #reform